# git-sharelatex

./: README.md  README.orig.rst  setup.cfg  setup.py  test-requirements.txt  tox.ini
sharelatex/: __init__.py  admin.py  cli.py
sharelatex/tests/: create-user-with-pass.js  docker-compose.yml  test_cli.py
