[metadata]
name = sharelatex
keywords = sharelatex, client
license_file = LICENSE
url = https://gitlab.inria.fr/sed-rennes/sharelatex/synchro-git-sharelatex
author = sed-rennes
author_email = sed-rba@inria.fr
long_description = file: README.rst
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
include_package_data = True
packages = find:
setup_requires =
    setuptools>=39.0.1
    wheel>=0.31.0
install_requires =
    socketIO-client==0.5.7.4
    click~= 7.0
    GitPython~=2.1.13
    filetype~=1.0.5
    keyring>=17.1.1
    keyrings.alt>=4.0.0
    lxml>=4.3.3

[options.extras_require]
admin = pymongo~=4.0

[options.packages.find]
exclude =
    docs

[options.entry_points]
console_scripts =
    slatex = sharelatex.cli:cli
    git-slatex = sharelatex.cli:cli
